apps/neuvector/ptl-intsvc/base/api-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nv-ingressroute-api
  namespace: neuvector
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: HostSNI(`cft-neuvector-api.platform.hmcts.net`)
    services:
    - name: neuvector-svc-controller-api
      port: 10443
  tls:
    passthrough: true
