apps/neuvector/ptl-intsvc/base/ingress-route-patch.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nv-ingressroute
  namespace: neuvector
spec:
  routes:
  - match: HostSNI(`cft-neuvector-multi-cluster.platform.hmcts.net`)
    services:
    - name: neuvector-svc-controller-fed-master
      port: 11443
